[tool.poetry]
name = "accomo-sun-backend"
version = "0.1.0"
description = ""
authors = ["조현일 <himzei@gmail.com>"]
readme = "README.md"
packages = [{include = "accomo_sun_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "~4.0"
djangorestframework = "^3.14.0"
PyJWT = "^2.6.0"
django-environ = "^0.9.0"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"


# [tool.poetry.group.dev.dependencies]
# autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
